--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,9 +90,8 @@ jobs:
           RAILS_ENV: test
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/gymvault_test
           # REDIS_URL: redis://localhost:6379/0
-        run: |
-          bin/rails db:prepare
-          bin/rails test
+        run: bundle exec rails db:prepare && bundle exec rails test
+
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
