Added default in DByml prod for render deployment

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,11 @@ test:
   database: gymvault_test
 
 production:
+  <<: *default
   url: <%= ENV["DATABASE_URL"] %>
 
   cable:
+    <<: *default
     url: <%= ENV["DATABASE_URL"] %>
+
 
