--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,8 @@ production:
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
 
+    queue:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+
 
