--- a/test/fixtures/exercises.yml
+++ b/test/fixtures/exercises.yml
@@ -1,5 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+#Exercise fixtures for testing purposes
 one:
   name: MyString
   weight: 100
